--- a/wa_web_clone/src/style/css/main.css
+++ b/wa_web_clone/src/style/css/main.css
@@ -83,7 +83,6 @@
 
 /* Start Modal Status */
 .modal-status{
-    /* background-color: #000000; */
     margin: 0;
     max-width: 100% !important;
     height: 100%;
@@ -119,4 +118,69 @@
     width: 100%;
     height: auto;
 }
+
+.blank-status{
+    text-align: center;
+    margin-top: 20vh;
+}
 /* End Modal Status */
+
+/* start show status */
+.modal-show-status{
+    margin: 0;
+    max-width: 100%;
+    height: 100px;
+}
+
+.modal-show-status img{
+    height: 99vh;
+}
+
+.each-status{
+    background-color: #000000;
+    opacity: 50%;
+}
+
+.carousel-indicators{
+    top: 0;
+}
+
+.navbar-show-status{
+    position: fixed;
+    width: 100%;
+    z-index: 99;
+}
+/* end show status */
+
+/* start login page */
+.background{
+    background-color: #d4dbd9;
+    height: 100vh;
+}
+
+.header-wa-web{
+    background-color: #00bfa5;
+    height: 200px;
+    color: #ffffff;
+    margin: auto;
+    padding-top: 30px;
+}
+
+.window-wa-web{
+    -webkit-box-shadow: 0px 0px 44px 4px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0px 0px 44px 4px rgba(0,0,0,0.3);
+    box-shadow: 0px 0px 44px 4px rgba(0,0,0,0.3);
+    margin: auto;
+    width: 900px;
+    height: 300px;
+    background-color: #ffffff;
+    position: relative;
+    top: -100px;
+    border-radius: 10px;
+}
+
+.logo-wa-web{
+    width: 39px;
+    margin-right: 20px;
+}
+/* end login page */
