--- a/wa_web_clone/src/style/css/main.css
+++ b/wa_web_clone/src/style/css/main.css
@@ -172,7 +172,7 @@
     box-shadow: 0px 0px 44px 4px rgba(0,0,0,0.3);
     margin: auto;
     width: 900px;
-    height: 300px;
+    height: 400px;
     background-color: #ffffff;
     position: relative;
     top: -100px;
@@ -182,5 +182,26 @@
 .logo-wa-web{
     width: 39px;
     margin-right: 20px;
+}
+
+.switch-link{
+    color: #00bfa5;
+}
+
+.switch-link:hover{
+    color: #00a892;
+}
+
+.btn-primary{
+    background-color: #00bfa5;
+    border-color: #00bfa5;
+    display: flex;
+    margin: auto;
+}
+
+.btn-primary:hover{
+    background-color: #ffffff;
+    color: #00bfa5;
+    border-color: #00bfa5;
 }
 /* end login page */
