--- a/wa_web_clone/src/style/css/main.css
+++ b/wa_web_clone/src/style/css/main.css
@@ -6,7 +6,7 @@
 }
 
 #box-chat{
-    max-height: 85vh;
+    height: 78vh;
     overflow-y: auto;
     background-color: #00bfa5;
     margin-top: 64px;
