--- a/wa_web_clone/src/style/css/main.css
+++ b/wa_web_clone/src/style/css/main.css
@@ -1,3 +1,8 @@
+hr{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 #box-list-chat {
     max-height: 80vh;
     overflow-y: auto;
@@ -6,14 +11,15 @@
 }
 
 #box-chat{
-    height: 78vh;
+    height: 80vh;
     overflow-y: auto;
     background-color: #00bfa5;
-    margin-top: 40px;
+    margin-top: 64px;
     margin-left: 5px;
-    padding: 0 10px;
+    padding: 10px 10px 0 10px;
     scrollbar-color: rgba(0,0,0,.2) hsla(0,0%,100%,.1);
     scrollbar-width: thin;
+    width: 911px;
 }
 
 #friend-chat{
@@ -57,6 +63,7 @@
     text-align: center;
     background-color: #f8f9fa;
     height: 590px;
+    width: 911px;
 }
 
 /* Start Modal Profile */
